Fixing bug 363839. Implement all of SVGPathSegList. Patched by Jeff Schiller <codedread@gmail.com>. r=jwatt@jwatt.org, sr=tor@acm.org